--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
