--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.4.0",
+    "gravatar": "^1.8.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
+    "react-gravatar": "^2.6.3",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-gravatar": "^1.0.2",
