--- a/ios/Tasks.xcodeproj/xcshareddata/xcschemes/Tasks.xcscheme
+++ b/ios/Tasks.xcodeproj/xcshareddata/xcschemes/Tasks.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Tasks.app"
-               BlueprintName = "Tasks"
-               ReferencedContainer = "container:Tasks.xcodeproj">
+               BuildableName = "tasks.app"
+               BlueprintName = "tasks"
+               ReferencedContainer = "container:tasks.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TasksTests.xctest"
-               BlueprintName = "TasksTests"
-               ReferencedContainer = "container:Tasks.xcodeproj">
+               BuildableName = "tasksTests.xctest"
+               BlueprintName = "tasksTests"
+               ReferencedContainer = "container:tasks.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Tasks.app"
-            BlueprintName = "Tasks"
-            ReferencedContainer = "container:Tasks.xcodeproj">
+            BuildableName = "tasks.app"
+            BlueprintName = "tasks"
+            ReferencedContainer = "container:tasks.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Tasks.app"
-            BlueprintName = "Tasks"
-            ReferencedContainer = "container:Tasks.xcodeproj">
+            BuildableName = "tasks.app"
+            BlueprintName = "tasks"
+            ReferencedContainer = "container:tasks.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
